RESOLVED FIXED160936
[CSS] The parser should not get rid of empty namespace specification in front of element name selectors
https://bugs.webkit.org/show_bug.cgi?id=160936
Summary [CSS] The parser should not get rid of empty namespace specification in front...
Benjamin Poulain
Reported 2016-08-17 00:12:04 PDT
[CSS] The parser should not get rid of empty namespace specification in front of element name selectors
Attachments
Patch (37.80 KB, patch)
2016-08-17 00:20 PDT, Benjamin Poulain
cdumez: review+
Benjamin Poulain
Comment 1 2016-08-17 00:20:04 PDT
Chris Dumez
Comment 2 2016-08-17 14:26:03 PDT
Comment on attachment 286286 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=286286&action=review r=me > Source/WebCore/css/CSSGrammar.y.in:1168 > + '|' { $$.init(const_cast<LChar*>(reinterpret_cast<const LChar*>("")), 0); } maybe a static LChar as the line below to avoid all this casting that looks unsafe?
Benjamin Poulain
Comment 3 2016-08-17 23:24:17 PDT
Note You need to log in before you can comment on or make changes to this bug.